Change input system again, so task/algorithmPost requests will always need to send an array of strings. Algorithms now store the amount of inputs needed.